<resources>
    <string name="app_name">UWatch</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_an_account">Dont have an Account ?  .</string>
    <string name="signup">SignUp</string>
    <string name="google"> Google</string>
    <string name="facebook"> Facebook</string>
    <string name="password">Password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="profile_password">Enter your password</string>
    <string name="profile_confirm_password">Confirm your password</string>
    <string name="username">UserName</string>
    <string name="profile_title">Your Information</string>
    <string name="profile_update">UPDATE</string>
    <string name="imdb_name">IMDB :</string>
    <string name="resume_title">Description</string>
    <string name="season">Choose a season</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="myList">My list</string>
    <string name="family">Family</string>
    <string name="drama">Drama</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="mystery">Mystery</string>
    <string name="fantasy">Fantasy</string>
    <string name="historical">Historical</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science fiction</string>
    <string name="thriller">Thriller</string>
    <string name="western">Western</string>
    <string name="anime">Anime</string>
    <string name="search">Search</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nom">First name</string>
    <string name="prenom">Last name</string>
    <string name="conf_password">Confirm your password</string>
    <string name="facebook_app_id">786533615339950</string>
    <string name="fb_login_protocol_scheme">fb786533615339950</string>
    <string name="main_title_header">Home page</string>
    <string name="list_title_header">My List</string>
    <string name="release_date">Release Year :</string>
    <string name="vote">vote</string>
    <string name="time">Runtime :</string>
    <string name="season_name">season</string>
    <string name="trailer">Trailer</string>
    <string name="categorie">Categorie</string>
    <string name="Mylist">My rate</string>
    <string name="search_header_title">Search interface</string>

</resources>