<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_color"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:layout_below="@id/login_back"
            android:text="Login"
            android:textColor="@color/myblue"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/profile"
            android:drawableTint="@color/myblue"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:drawableTint="@color/myblue"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/showpass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/eye_not_active" />
        </RelativeLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_alignRight="@id/Password"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:text="Login"
        android:textColor="@color/button_test"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlogin"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/signup"
            android:textColor="#0099ff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_google_button"
            android:drawableLeft="@drawable/ic_google"
            android:drawablePadding="5dp"
            android:text="@string/google"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFacebook"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_facebook_drawable"
            android:drawableRight="@drawable/ic_facebook"
            android:drawableTint="@color/white"
            android:drawablePadding="5dp"
            android:text="@string/facebook"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout></ScrollView>
