<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_color"
            android:src="@drawable/back"
            android:tint="@color/button_nav" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back"
            android:text="@string/search_header_title"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/myblue"/>
    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="Search"
                android:textColor="@color/myblue"
                android:textSize="50sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Search"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/inputSearch"
                    android:completionThreshold="2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Search"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="2dp"
                    android:layout_weight="4"
                    android:background="@drawable/btn_bg"
                    android:textColor="@color/button_test"
                    android:text="@string/search"
                    android:textStyle="bold"
                    android:textSize="12dp"/>/>

            </RelativeLayout>
            <TextView
                android:id="@+id/chooseCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_alignLeft="@id/linearLayout"
                android:layout_marginTop="30dp"
                android:text="choose Category :"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chooseCategory"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/Category_action"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/action"
                    android:text="@string/action"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/Category_drama"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/drama"
                    android:text="@string/drama"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout3"
                android:layout_marginHorizontal="10dp">

                <Button
                    android:id="@+id/Category_Horror"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/horror"
                    android:text="@string/horror"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/Category_Crime"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/crime"
                    android:text="@string/crime"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout4"
                android:layout_marginHorizontal="10dp">

                <Button
                    android:id="@+id/Category_Thriller"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/thriller"
                    android:text="@string/thriller"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/Category_Comedy"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/comedy"
                    android:text="@string/comedy"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout5"
                android:layout_marginHorizontal="10dp">

                <Button
                    android:id="@+id/Category_Animation"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/anime"
                    android:text="@string/anime"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/Category_Family"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/familly"
                    android:text="@string/family"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>


