<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_color"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/register"
            android:textColor="#0099ff"
            android:textSize="50sp"
            android:textStyle="bold" />
        <LinearLayout android:id="@+id/nom_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/reg_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/nom"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/reg_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/prenom"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black" />
        </LinearLayout>
        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nom_prenom"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/showpass1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/eye_not_active" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Password"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/inputConformPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/conf_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/showpass2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/eye_not_active" />
        </RelativeLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password2"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_bg"
            android:text="@string/register"
            android:textColor="@color/button_test"
            android:textStyle="bold" />
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:text="Already Have an Account?"
                android:textColor="@color/black"
                android:textColorLink="@color/button_test" />

            <TextView
                android:id="@+id/tologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:shadowColor="@color/black"
                android:text="Login"
                android:textColor="#0099ff" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
